refactor: Arrays.asList 대신 List.of 사용